Fixed some mobile styling issues in Projects page and Resumes. In resumes I fixed text too small for phone, and in resumes I made resume take up 95% width in mobile.

--- a/Projects/css/main.css
+++ b/Projects/css/main.css
@@ -165,13 +165,22 @@ main {
 
 /*============TEXT STYLING====================*/
 
-.projectText{
-  color: #303030;
-  /*font-style: oblique;*/
-  font-size: 2vw;
-  /*text-decoration: none;*/
+@media screen and (min-width: 600px) and (min-device-width: 600px) {
+  .projectText {
+    color: #303030;
+    /*font-style: oblique;*/
+    font-size: 2vw;
+    /*text-decoration: none;*/
+  }
 }
-
+@media screen and (max-width: 599px), (max-device-width : 599px) {
+  .projectText {
+    color: #303030;
+    /*font-style: oblique;*/
+    font-size: 4vw;
+    /*text-decoration: none;*/
+  }
+}
 .projectHeader{
   width : 100%;
 }
@@ -236,7 +245,7 @@ figure figcaption {
 /*=====BEGIN COURSEWORK=========*/
 .courseWork{
   text-align: left;
-  font-size : 2.5vw;
+  /*font-size : 2.5vw;*/
 }
 /*END MAIN CONTENT CSS====================*/
 
